tests/baselines/reference/asyncClass.errors.txt
tests/cases/conformance/async/downlevel/asyncClass.ts(6,1): error TS1041: 'async' modifier cannot be used with a class declaration.


==== tests/cases/conformance/async/downlevel/asyncClass.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    async class C {  
    ~~~~~
!!! error TS1041: 'async' modifier cannot be used with a class declaration.
    }